--- a/index.html
+++ b/index.html
@@ -8,9 +8,24 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <div class="container">
-
-    </div>
+    <div class="flex-container">
+        <div class="title"><h1>Etch-A-Sketch</h1></div>
+        <div class="mode">Mode: Coloring</div>
+        <div class="container">
+            <div class="gridboard"></div>
+            <div class="buttons">
+                <button onclick="changeColor('black')">Black</button>
+                <button onclick="changeColor('gray')">Eraser</button>
+                <button onclick="changeColor('white')">White</button>
+                <button onclick="changeColor('random')">Random</button>
+                <button onclick="resetGrid()"> Reset</button>
+            </div>
+            <div class="select-button">
+                <input type="text" placeholder="Size of Grid" value="16" onchange="changeSize(this.value)">
+                <button>Set Size</button>
+            </div>
+        </div>
+    </div> 
     <script src="script.js"></script>
 </body>
 </html>
